# rust-tutorial

./: Cargo.toml  README.md
src/fundamentals/: data_types.rs  functions.rs  hello_world.rs
src/fundamentals/guessing-game/: README.md  main.rs
