[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

[[bin]]
name = "hello_world"
path = "src/fundamentals/hello_world.rs"

[[bin]]
name = "data_types"
path = "src/fundamentals/data_types.rs"


[[bin]]
name = "guessing-game"
path = "src/fundamentals/guessing-game/main.rs"